--- a/page.html
+++ b/page.html
@@ -29,7 +29,7 @@
 -->
         
 
-        <div>
+        <div class="top">
 
             <div class="heart" id="happy">HAPPY</div>
             <div class="heart" id="health">Healthy</div>
@@ -37,7 +37,8 @@
 
         <div id="ball"><p id="A"></p><p id="B"></p><p id="C"></p><p id="D"></p>
         </div>
-        <div>
+        <div id="bc"></div>
+        <div class="bottom">
 
             <div class="heart" id="lucky">Lucky</div>
             <div class="heart" id="satisfied">Satisfied</div>
